--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,7 +25,8 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
         with:
-          persist-credentials: true
+#           persist-credentials: true
+          ssh-key: ${{ secrets.git_ssh_key }}
  
 
     # Runs a single command using the runners shell
